# remy-mcp

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: copilot-instructions.md
data/: kod_yeshuv.py
docs/: israel-land-authority-api.md  israel-land-authority-exploration.md
examples/: example_usage.py
scripts/: run_tests.py
src/remy_mcp/: __init__.py  server.py
src/remy_mcp/client/: __init__.py  israeli_land_api.py
src/remy_mcp/models/: __init__.py  arg_models.py  reference_models.py  tender_models.py
src/remy_mcp/resources/: __init__.py  reference_resources.py  server_resources.py
src/remy_mcp/tools/: __init__.py  settlement_tools.py  tender_tools.py
src/remy_mcp/utils/: __init__.py  settlement_utils.py
tests/: README.md  __init__.py  conftest.py  test_api_client_e2e.py  test_mcp_basic.py  test_mcp_server_e2e.py  test_performance_e2e.py  utils.py
